--- a/package.xml
+++ b/package.xml
@@ -18,5 +18,7 @@
 
   <export>
     <build_type>ament_python</build_type>
+    <gazebo_ros gazebo_model_path="/ws/install/cobot_description/share/"/>
+    <gazebo_ros gazebo_model_path="/ws/install/robotiq_description/share/"/>
   </export>
 </package>
